<resources>
    <string name="app_name">哈哈哈</string>
    <string name="login">登录</string>
    <string name="input_user_id">请输入用户id</string>
    <string name="conversation_list">会话列表</string>
    <string name="chat_room">聊天室</string>
    <string name="discussion">讨论组</string>
    <string name="create_discussion">创建讨论组</string>
    <string name="start_discussion">启动讨论组</string>
    <string name="group">群组</string>
    <string name="logout">退出登录</string>
    <string name="custom_service">客服</string>
    <string name="my_id">我的id: %1$s</string>
    <string name="create_discussion_hint">请输入成员id，以英文逗号分隔</string>
    <string name="discussion_name_hint">请输入讨论组名称</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="setting">设置</string>
    <string name="switch_language">切换语言</string>

    <string name="testt">它们既是 Labo 的设计主线，同样也是 Labo 的乐趣源泉。这也是为什么，你会看到 Labo 既能吸引一个吐字不清的五岁小屁孩，让他花一个下午的时间乐此不疲地做出炫酷的机器人套件；同样还能吸引一个二三十岁的码农，让他沉浸在编程玩法中孜孜不倦地实现各种 DIY 创造。

所以这次，借助体验任天堂 Labo 的机会，让我们重新对这三个核心理念进行了一次梳理，看看这个明显是“小孩子的游戏玩具”，是如何让一帮大人们沉迷的。

看似简陋的瓦楞纸，其实暗藏玄机
和所有的模型类产品一样，Labo 是注重亲自从零开始制作的。虽然这很费力，但不夸张地说，如果缺少这一步，大概会流失掉 50% 以上的乐趣。

这就好比高达模型，如果只是买成品，没有图纸和零部件，那么玩家可能只是摆弄几下就闲置在一边；也好比乐高积木，如果只是给玩家一个现成的大房子，那么如何满足自己创作欲的表达和想象力的延展？

任天堂开发团队是理解并熟知这一点的，正如他们在幕后开发故事中所说，就算是产品本身“稀松平常”，但最终会借助这份“创造性”，变成一个优点。在 Labo 的组装过程中我印象最深的是，很多纸板虽然掰下来挺大一块，但其中有不少是要左右或上下叠在一起的，这也是加强硬度最简单的方式；而在一些可动的关节部分，则会用多个小纸板进行互相的插接，从而实现加固的效果。

另外从演示玩法也能看出来，Labo 其实并不需要承受“用脚踩”、“用屁股坐”等这类重压的情况，就算是做敲击、转动或是一些拉扯动作，瓦楞纸的硬度其实是没有太大压力的。

因此即便只是简单的“加厚”和“插接”，只要不碰上纸板最大的天敌“水”，合理的结构足以保证套件的稳定性。
        在制作过程中，我常常在这样的情绪里循环往复：起初拿着纸板一头雾水，当完成某一个步骤时，眼前是一片“原来如此”的豁然开朗，而拿起下一块纸板时，又是一头雾水……

其实单论组装难度和精度，Labo 很难和乐高、高达相抗衡，后两者不仅零件数量更多，对于细节和还原度也更为考究。相比之下，Labo 的原材料种类相当朴素：几张纸板，几个卡扣，一张反光贴纸，一些线和皮筋，几乎都是生活中随处可见的物件。

如果没有 Switch，Labo 大概就真的只是一个低年龄组水平的普通纸膜。
    </string>
</resources>
