<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bu2zh.rongdemo.activity.LoginActivity">

    <TextView
        android:id="@+id/package_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="我的id: "/>

    <Button
        android:id="@+id/conversation_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversation_list"/>

    <Button
        android:id="@+id/discuss_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discussion"/>

    <Button
        android:id="@+id/custom_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_service"/>

    <Button
        android:id="@+id/refresh_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="更新用户信息"/>

    <Button
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="发送消息"/>

    <Button
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="群组"/>

    <Button
        android:id="@+id/chatroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="聊天室"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>

    <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"/>

</LinearLayout>
