<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/message_notice"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sw_friend_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="#dfdfdd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/set_top"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sw_friend_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="#dfdfdd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clean_friend"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/clean_message"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>